# food-vote

./: .gitignore  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
data/: app.db
src/my_web_app/: database.db  main.py
src/my_web_app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/my_web_app/templates/: about.html  base.html  calendar.html  cats.html  contact.html  index.html
tests/: test_sample.py
